[package]
name = "libp2ep"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
bitcoin = { version = "0.23", features = ["use-serde", "bitcoinconsensus"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
